use module worker

--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-<script>
-const username = prompt('your bgm.tv username')
-if (!username) {
-  alert('please input your username')
-  location.reload()
-}
-const url = new URL(location.href)
-url.searchParams.set('username', username)
-location.href = url.toString()
-</script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+  </head>
+  <body>
+    <script>
+      const username = prompt("your bgm.tv username");
+      if (!username) {
+        alert("please input your username");
+        location.reload();
+      }
+      const url = new URL(location.href);
+      url.searchParams.set("username", username);
+      location.href = url.toString();
+    </script>
+  </body>
 </html>
